Update and rename blank.yml to jsc.yml

--- a/.github/workflows/jsc.yml
+++ b/.github/workflows/jsc.yml
@@ -21,6 +21,9 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+  
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.0.1
 
     - name: Chocolatey Action
       uses: crazy-max/ghaction-chocolatey@v1.2.2
@@ -30,8 +33,14 @@ jobs:
     - name: install pywin32
       run: pip install pywin32
       
+    #- name: build
+    #  run: perl Tools/Scripts/build-webkit --jsc-only --release
     - name: build
-      run: perl Tools/Scripts/build-webkit --jsc-only --release
-      
+      run: Tools/Scripts/build-jsc --jsc-only --release
     
+    - name: show built
+      run: ls 
+    
+    - name: show built2
+      run: ls WebKitBuild
 
