--- a/.github/workflows/jsc.yml
+++ b/.github/workflows/jsc.yml
@@ -37,11 +37,11 @@ jobs:
     
     - run: perl -v
 
-    - name: build
-      run: perl Tools/Scripts/build-webkit --help
+    #- name: build
+    #  run: perl Tools/Scripts/build-webkit --help
 
     - name: build-jsc
-      run: perl /Tools/Scripts/build-jsc --jsc-only --release --verbose
+      run: perl Tools/Scripts/build-jsc --jsc-only --release --verbose
     
     - name: show built
       run: ls 
