--- a/.github/workflows/jsc.yml
+++ b/.github/workflows/jsc.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Chocolatey Action
       uses: crazy-max/ghaction-chocolatey@v1.2.2
       with:
-        args: install cmake python2 ruby patch diffutils gperf -y
+        args: install cmake python2 ruby patch diffutils gperf ninja -y
    
     - name: install pywin32
       run: pip install pywin32
@@ -41,8 +41,17 @@ jobs:
     - run: python Tools/Scripts/update-webkit-wincairo-libs.py
 
     - name: build-jsc
-      run: mkdir WebKitBuild/Build-JSC && cd WebKitBuild/Build-JSC && cmake -DPORT="JSCOnly" -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Release -G Ninja -DDEVELOPER_MODE=ON  -DENABLE_FTL_JIT=OFF ../../ && ninja
+      run: mkdir WebKitBuild/Build-JSC && cd WebKitBuild/Build-JSC && cmake -DPORT="JSCOnly" -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Release -G Ninja -DDEVELOPER_MODE=ON  -DENABLE_FTL_JIT=OFF ../../ && ninja && cd ../../
     
     - name: show built
       run: ls WebKitBuild/Build-JSC
+  
+    - name: 'Tar files'
+      run: tar -cvf jsc-libs.tar WebKitBuild/Build-JSC/lib64
 
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: jsc-libs.tar  
+      
